# kyto

./: .gitattributes  .gitignore  .kyto.config.example  CONTRIBUTING.md  Cargo.toml  README.de.md  README.es.md  README.fr.md  README.ja.md  README.md  README.pt-BR.md  README.ru.md  README.uk.md  README.zh-CN.md  kyto.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml  wiki-sync.yml
asm/: README.md  build.ps1  build.sh
asm/src/: cmd_crypto.asm  cmd_init.asm  config.asm  config_parse_simple.asm  crypto.asm  emit_deploy.asm  emit_env.asm  emit_users.asm  kura.asm  kura_linux.asm  kyto_compile.asm  kyto_eval.asm  lexer.asm  linux_io.asm  parse_util.asm  str.asm  toml_min.asm  win_io.asm
asm/src/inc/: const.inc  io_buf.asm  kura_cmds.asm
crates/kyto-cli/: Cargo.toml
crates/kyto-cli/src/: install.rs  main.rs
crates/kyto-core/: Cargo.toml
crates/kyto-core/src/: ast.rs  config.rs  crypto.rs  emit.rs  error.rs  eval.rs  lexer.rs  lib.rs  parser.rs  project.rs
crates/kyto-core/tests/: kyto_config.rs
docs/: asm-full-language-plan.md  configuration.md  readme-badges.md
docs/wiki/: Architecture.md  Configuration-Guide.md  Encryption-and-Privacy.md  FAQ.md  Getting-Started.md  Home.md  Installing-Kyto.md  Interesting-Facts.md  Kura-CLI-Reference.md  Kura-Commands.md  Kyto-vs-Kura.md  Language-Tutorial.md  Naming-and-Origin.md  README.md  _Sidebar.md
examples/minimal/: .kyto.config  kyto.toml
package/: Dockerfile
scripts/: install-kura.ps1  install-kura.sh
spec/: asm-roadmap.md  grammar.md  kyto-lite.md
(+2 files in other folders)
