[workspace]
resolver = "2"
members = ["crates/kyto-core", "crates/kyto-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/voidmute/kyto"
homepage = "https://github.com/voidmute/kyto"
description = "Privacy-first config language and Kura compiler for any project"
keywords = ["config", "compiler", "kyto", "kura", "privacy"]
categories = ["development-tools", "config"]
