[package]
name = "kyto-cli"
version.workspace = true
edition.workspace = true
description = "Kura CLI for the Kyto config language"
repository.workspace = true
homepage.workspace = true
license.workspace = true

[[bin]]
name = "kura"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
kyto-core = { path = "../kyto-core" }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
