[package]
name = "kyto-core"
version.workspace = true
edition.workspace = true
description = "Kyto language compiler core"
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
chacha20poly1305 = "0.10"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"

[dev-dependencies]
kyto-core = { path = "." }
